[gd_scene load_steps=4 format=3 uid="uid://hk2x4t4ppa1t"]

[ext_resource type="Script" uid="uid://d3gjhlfg65wkq" path="res://scripts/start_menu.gd" id="1_ouf4f"]
[ext_resource type="FontFile" uid="uid://bypmpvinq8cf6" path="res://assets/fonts/Pixel Game.otf" id="2_thu50"]
[ext_resource type="AudioStream" uid="uid://byi0hxvc6l0mt" path="res://assets/music/Main_Menu.mp3" id="3_m7x51"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouf4f")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 651.0

[node name="GameTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 82.0
offset_right = 1150.0
offset_bottom = 229.0
theme_override_fonts/font = ExtResource("2_thu50")
theme_override_font_sizes/font_size = 144
text = "WMS Game"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -32.0
offset_right = 66.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_thu50")
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 50.0
offset_right = 66.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_thu50")
theme_override_font_sizes/font_size = 36
text = "Quit"

[node name="PracticeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1069.0
offset_top = 607.0
offset_right = 1139.0
offset_bottom = 638.0
text = "picking"

[node name="packingbutton" type="Button" parent="."]
layout_mode = 0
offset_left = 931.0
offset_top = 606.0
offset_right = 1054.0
offset_bottom = 637.0
text = "packing"

[node name="shippingbutton" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 604.0
offset_right = 923.0
offset_bottom = 635.0
text = "shipping"

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_m7x51")
parameters/looping = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PracticeButton" to="." method="_on_practice_button_pressed"]
[connection signal="pressed" from="packingbutton" to="." method="_on_packingbutton_pressed"]
[connection signal="pressed" from="shippingbutton" to="." method="_on_shippingbutton_pressed"]
